<resources>
    <string name="app_name">MyMiniSlot</string>
    <string name="title">ミニスロットゲーム</string>
    <string name="coin_name">手持ちコイン：</string>
    <string name="defult_coin">1000</string>
    <string name="bet_name">掛け金：</string>
    <string name="bet_coin">10</string>
    <string name="bet_up">掛け金UP</string>
    <string name="bet_down">掛け金DOWM</string>
    <string name="start">Start</string>
    <string name="reset">リセット</string>
    <string name="remove">戻る</string>
    <string name="hyahha">ヒャッハー！</string>
</resources>
