<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".MainActivity" tools:layout_editor_absoluteY="25dp">

    <ImageView
            android:layout_width="266dp"
            android:layout_height="249dp" app:srcCompat="@drawable/publicdomainq_0005331nyr"
            android:id="@+id/imageView9"
            android:scaleType="fitCenter"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"/>
    <TextView
            android:text="@string/title"
            android:layout_width="460dp"
            android:layout_height="66dp"
            android:id="@+id/textView2" android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="@+id/imageView9"
            app:layout_constraintStart_toStartOf="@+id/imageView9" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView9"/>
    <TextView
            android:text="@string/coin_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="40dp" android:layout_marginStart="40dp" android:layout_marginBottom="308dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/defult_coin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/my_coin1" android:textSize="45sp"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>
    <TextView
            android:text="@string/bet_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="88dp" android:layout_marginStart="88dp" android:layout_marginBottom="184dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/bet_coin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/my_bet1" android:textSize="45sp"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"/>
    <Button
            android:text="@string/bet_up"
            android:id="@+id/up_bet" android:textSize="40sp"
            android:height="@dimen/btn_height" android:layout_width="276dp"
            android:layout_height="@dimen/btn_height"
            android:layout_marginBottom="29dp"
            app:layout_constraintBottom_toTopOf="@+id/down_bet"
            app:layout_constraintEnd_toEndOf="@+id/down_bet"/>
    <Button
            android:text="@string/bet_down"
            android:layout_width="276dp"
            android:layout_height="@dimen/btn_height"
            android:id="@+id/down_bet" android:textSize="40sp"
            android:layout_marginBottom="148dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"/>
    <Button
            android:text="@string/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/start" android:textSize="40sp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="208dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="208dp"/>
    <Button
            android:text="@string/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reset_btn"
            android:textSize="20sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginLeft="46dp"
            android:layout_marginStart="46dp"/>
</android.support.constraint.ConstraintLayout>