<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent" tools:layout_editor_absoluteY="25dp">

    <ImageView
            android:layout_width="120dp"
            android:layout_height="211dp" app:srcCompat="@drawable/question"
            android:id="@+id/iv_2"
            app:layout_constraintStart_toEndOf="@+id/iv_1"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/iv_3" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="90dp" app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
            android:layout_width="120dp"
            android:layout_height="211dp" app:srcCompat="@drawable/question"
            android:id="@+id/iv_3"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="60dp" android:layout_marginRight="60dp" android:layout_marginTop="90dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
            android:layout_width="120dp"
            android:layout_height="211dp" app:srcCompat="@drawable/question"
            android:id="@+id/iv_1"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="60dp" android:layout_marginStart="60dp" android:layout_marginTop="90dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/coin_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="52dp" android:layout_marginStart="52dp" android:layout_marginBottom="340dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/defult_coin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/my_coin1" android:textSize="45sp"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <TextView
            android:text="@string/bet_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8" android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="52dp" android:layout_marginStart="52dp" android:layout_marginBottom="200dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/bet_coin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/my_bet1" android:textSize="45sp"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8"/>
    <TextView
            android:text="@string/hyahha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10" android:textSize="50sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="52dp" android:layout_marginStart="52dp" android:layout_marginBottom="440dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageView
            android:layout_width="188dp"
            android:layout_height="210dp" app:srcCompat="@drawable/raou"
            android:id="@+id/imageView4"
            android:layout_marginBottom="300dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginRight="32dp"/>
    <Button
            android:text="@string/remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/modoru" android:textSize="30sp"
            android:layout_marginBottom="76dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="84dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="84dp"/>
    <Button
            android:text="Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_2"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>
</android.support.constraint.ConstraintLayout>